Fix hero body being cropped

--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -18,15 +18,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 60vh;
   min-height: 730px;
+  min-height: 60vh;
   position: relative;
   overflow: hidden;
 }
 
 @media (min-width: 600px) {
   .Hero-container {
-    height: 76vh;
+    min-height: 76vh;
   }
 }
 
@@ -71,6 +71,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  padding: 2rem 0;
   position: relative;
   align-items: center;
   text-align: center;
